deploy/k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: lnk-kfj-ingress
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origing: "*"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Origin, Content-Type, Authorization"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
spec:
  rules:
  - host: lnk-kfj.cluster.local
    http:
      paths:
      - path: /
        backend:
          serviceName: lnk-kfj
          servicePort: 8080
  tls:
  - hosts:
    - lnk-kfj.cluster.local
    secretName: lnk-kfj-tls-cer
